# cpp-projects

./: .gitignore  README.md
eigen_test/: CMakeLists.txt  main.cpp
opencv_test/: CMakeLists.txt  surf_descriptor.cpp
opencv_test/include/: surf_descriptor.h
pc_feature_extractor/: CMakeLists.txt  main.cpp
pc_feature_extractor/include/: image_projection.h  utils.h
pcl_viewer/: CMakeLists.txt  config.yaml  main.cpp
test_mvbb/: CMakeLists.txt  Untitled.ipynb  calculatebb.cpp  main.cpp
yaml_parser/: CMakeLists.txt  config.yaml  main.cpp
